# DNG2JPG

./: .g.conf  CHANGELOG.md  README.md  pyproject.toml
docs/: FLOWCHART.md  REFERENCES.md  REQUIREMENTS.md  WORKFLOW.md
images/: flowchart.md
scripts/: d2j.sh  test_all_pipeline.sh
src/dng2jpg/: __main__.py  core.py  dng2jpg.py
src/shell_scripts/: utils.py
tests/: test_uint16_postprocess_pipeline.py
