[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.41.0", "build>=1.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dng2jpg"
version = "0.0.0"
description = "Convert a DNG to a JPG with a HDR Merge."
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
  { name = "Francesco Rolando" }
]
keywords = ["shell", "scripts", "uv", "astral", "uvx", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Configuration Management",
]

dependencies = [
]

[dependency-groups]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/Ogekuri/DNG2JPG"
Repository = "https://github.com/Ogekuri/DNG2JPG"

[project.scripts]
dng2jpg = "dng2jpg.core:main"
d2j = "dng2jpg.core:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["dng2jpg", "dng2jpg.*"]

[tool.setuptools.package-data]
dng2jpg = ["*.py"]
